# VIO-SLAM

./: .gitignore  CMakeLists.txt  README.md
week1_introduction_math/src/: rotation_comparsion.cpp
week3_optimization_based_sensor_fusion/CurveFitting_LM/: READ.md  README.md
week3_optimization_based_sensor_fusion/CurveFitting_LM/app/: CurveFitting.cpp
week3_optimization_based_sensor_fusion/CurveFitting_LM/backend/: problem.cc
week4_sliding_window_optimization/nullspace_test/: hessian_nullspace_test.cpp
week5_backend_solver/code/app/: TestMonoBA.cpp
week5_backend_solver/code/backend/: edge_reprojection.cc  problem.cc  vertex_pose.cc
